# agents

./: GEMINI Context Engineering Concepts.md  Guide-to-Designing-Multi-Agent-Systems-with ADK.md  The Complete Guide to Agent & Prompt Engineering.md
Multi Agents/Business Development Manager/bdm_assistant/: .env.example  Makefile  README.md  pyproject.toml
Multi Agents/Business Development Manager/bdm_assistant/bdm_assistant/: agent.py  prompt.py  tools.py
Multi Agents/Business Development Manager/bdm_assistant/bdm_assistant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Multi Agents/Business Development Manager/bdm_assistant/bdm_assistant/sub_agents/client_engagement_agent/: __init__.py  agent.py
Multi Agents/Business Development Manager/bdm_assistant/bdm_assistant/sub_agents/lead_generation_agent/: __init__.py  agent.py
Multi Agents/Business Development Manager/bdm_assistant/bdm_assistant/sub_agents/market_research_agent/: __init__.py  (+1 more)
Multi Agents/Business Finances/tradie_ai_head_of_finance/: Makefile  README.md  pyproject.toml
Multi Agents/Business Finances/tradie_ai_head_of_finance/tradie_ai_head_of_finance/: agent.py  prompt.py  tools.py
Multi Agents/Business Finances/tradie_ai_head_of_finance/tradie_ai_head_of_finance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Multi Agents/Email Manager/gmail_manager/: Makefile  pyproject.toml
Multi Agents/Email Manager/gmail_manager/gmail_manager/: agent.py  prompt.py  tools.py
Multi Agents/Email Manager/gmail_manager/gmail_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Multi Agents/Marketing Manager/tradie_ai_marketing_manager/: Makefile  pyproject.toml
Multi Agents/Marketing Manager/tradie_ai_marketing_manager/tradie_ai_marketing_manager/: agent.py  prompt.py  tools.py
Multi Agents/Marketing Manager/tradie_ai_marketing_manager/tradie_ai_marketing_manager.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+32 files in other folders)
